# mnist_classification

./: Cargo.toml  README.adoc  Run-Release.ps1  Run.ps1
.run/: check .run.xml  run.run.xml  test.run.xml
src/: lib.rs  main.rs
src/algebra/: mod.rs
src/infrastructure/: logging.rs  mod.rs
src/infrastructure/mnist_loader/: dataset.rs  error.rs  errors.rs  mnist_errors.rs  mnist_images.rs  mnist_labels.rs  mod.rs
src/infrastructure/mnist_loader/file_reader/: flat_file_reader.rs  gz_file_reader.rs  mod.rs
src/infrastructure/mnist_loader/raw/: images.rs  labels.rs  mod.rs
src/prelude/: arrays_random.rs  mod.rs
