[package]
name = "mnist_classification"
version = "0.1.0"
authors = ["Kamil Duda <kamilduda01@gmail.com>"]
homepage = "https://github.com/kamilduda/mnist_classification"
repository = "https://github.com/kamilduda/mnist_classification"
edition = "2018"


[dependencies]
#nalgebra = "0.21"
ndarray = "0.13"
ndarray-rand = "0.11"
