[package]
name = "mnist_classification"
version = "0.1.0"
authors = ["Kamil Duda <kamilduda01@gmail.com>"]
homepage = "https://github.com/kamilduda/mnist_classification"
repository = "https://github.com/kamilduda/mnist_classification"
edition = "2018"


[dependencies]
# N-dimensional arrays
ndarray = "0.13"
ndarray-rand = "0.11"

# logging
log = "0.4.8"
env_logger = "0.7.1"

# MNIST loader
flate2 = "1.0.16"
